--- a/frontend/src/component/Admin/Sidebar.css
+++ b/frontend/src/component/Admin/Sidebar.css
@@ -2,15 +2,14 @@
   width: 100%;
   display: flex;
   align-items: center;
-  background: #fff;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
 .sidebar-container .sidebar {
   height: 100%;
   width: 260px;
-  padding: 20px 0;
   background-color: #fff;
+  border-right: 1px solid rgba(0, 0, 0, 0.13);
+
   transition: all 0.4s ease;
 }
 
@@ -39,35 +38,35 @@
 .sidebar .list a .icon {
   margin-right: 14px;
   font-size: 20px;
-  color: #707070;
+  color: #404040;
 }
-.list a .link {
-  color: #707070;
+.sidebar .list a .link {
+  color: #404040;
   font-size: 1.2rem;
   font-weight: 500;
   margin-left: 10px;
 }
 
 .sidebar .lists .list a svg {
-  color: #707070;
+  color: #404040;
 }
 
 .overlay {
   position: fixed;
   top: 0;
   left: -100%;
-  height: 1000vh;
+  height: 100%;
   width: 200%;
   opacity: 0;
-  pointer-events: none;
   transition: all 0.4s ease;
   background: rgba(0, 0, 0, 0.3);
   z-index: 1000;
+  pointer-events: none;
 }
 .overlay.active {
   opacity: 1;
-  pointer-events: none;
   left: 256px;
+  pointer-events: auto;
 }
 
 .sidebar-products .sidebar-options {
@@ -90,12 +89,11 @@
 }
 .dashboard-btn {
   position: fixed;
-  top: 120px;
+  top: 100px;
   left: 0;
   padding-left: 5px;
   color: #fff;
   padding: 6px 10px 2px 8px;
-
   background-color: var(--green);
   cursor: pointer;
   border-top-right-radius: 50%;
@@ -104,8 +102,8 @@
 }
 .sidebar-close-btn {
   position: absolute;
-  top: 70px;
-  right: 0;
+  top: 30px;
+  left: 10px;
   color: #000;
   cursor: pointer;
   display: none;
@@ -125,6 +123,7 @@
   .sidebar-container.active {
     margin-left: 0;
   }
+
   .sidebar-container.active .dashboard-btn {
     display: none;
   }
@@ -133,70 +132,12 @@
   }
   .sidebar-container .sidebar {
     position: fixed;
+    margin-top: 0;
     top: 80px;
+    border-right: none;
   }
   .list a .link {
     font-size: 16px;
     font-weight: 400;
   }
 }
-
-/* .sidebar {
-  position: relative;
-  background-color: rgb(255, 255, 255);
-  display: flex;
-  flex-direction: column;
-  padding: 5rem 0;
-}
-.sidebar div.MuiTreeItem-label {
-  font-family: poppins, Roboto;
-  font-size: 1.2rem;
-  font-weight: 500;
-}
-.sidebar div.MuiTreeItem-content.Mui-selected{
-  background-color: transparent;
-}
-
-.sidebar > a:first-child {
-  padding: 0;
-}
-.sidebar > a > img {
-  width: 100%;
-  transition: all 0.5s;
-}
-
-.sidebar a {
-  text-decoration: none;
-  color: rgba(0, 0, 0, 0.493);
-  padding: 1.5rem 1.9rem;
-
-  font-size: 1.2rem;
-  font-weight: 500;
-  transition: all 0.5s;
-}
-.sidebar a:hover {
-  color: var(--green);
-}
-
-.sidebar a > P {
-
-  display: flex;
-  align-items: center;
- 
-}
-.sidebar a > p > svg {
-  margin-right: 0.5rem;
-}
-
-.sidebar .MuiTypography-root {
-  background-color: #fff;
-}
-@media (max-width: 920px) {
-  .sidebar {
-    position: fixed;
-    width: 190px;
-
-    height: 100%;
-    margin-left: -100%;
-  }
-} */
