--- a/frontend/src/component/layout/Footer/Footer.css
+++ b/frontend/src/component/layout/Footer/Footer.css
@@ -1,91 +1,153 @@
+.footer {
+  background: var(--footer-blue);
+  color: var(--footer-grey);
+  padding: 2rem 9%;
+  margin-top: 50px;
+}
+.footer .footer-items {
+  display: flex;
+}
+.footer .footer-logo {
+  margin-right: 60px;
+  width: 20rem;
+}
+.footer .footer-items .footer-logo p {
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: 200;
+  line-height: 25px;
+}
+.footer .footer-items .footer-logo img {
+  height: 25px;
+}
+.footer .box-container {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  gap: 1rem;
+}
 
-.footer{
-    background: var(--footer-blue);
-    color: var(--footer-grey);
-    padding: 2rem 9%;
+.footer .box-container .box h3 {
+  font-size: 25px;
+  font-weight: 300;
 }
-.footer .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(20rem,1fr));
-    gap: 1.5rem;
+
+.footer .box {
+  display: flex;
+  flex-direction: column;
 }
-.footer .box-container .box h3{
-    font-size: 25px;
-    font-weight: 300;
+
+.footer a {
+  color: var(--footer-grey);
+  font-size: 17px;
+  font-weight: 300;
+  background: transparent;
+  line-height: 2.5rem;
 }
-.footer .box{
-    display: flex;
-    flex-direction: column;
+.footer a:hover {
+  color: var(--green-light);
 }
-.footer a{
-    color: var(--footer-grey);
-    font-size: 17px;
-    font-weight: 300;
-    background: transparent;
-    line-height: 2.5rem;
+.line {
+  border-bottom: 1px solid var(--line);
+  padding: 20px 0;
+  width: 80%;
+  margin: auto;
 }
-.footer a:hover{
-    color: var(--green-light);
-    
+.footer .subs-container .social-media-icons a {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  font-size: 20px;
+  border: 1px solid var(--line);
+  text-align: center;
+  margin-left: 10px;
+  cursor: pointer;
 }
-.line{
-    border-bottom: 1px solid var(--line);
-    padding: 20px 0; 
-    width: 80%;
+.footer .subs-container .social-media-icons a:hover {
+  background-color: var(--footer-grey);
+  color: var(--footer-blue);
+}
+
+.footer .subs-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+.footer .subs-container .subs-form input,
+button {
+  padding: 6px 16px;
+  font-size: 16px;
+}
+.footer .subs-form input {
+  border-top-left-radius: 0.2rem;
+  border-bottom-left-radius: 0.2rem;
+}
+.footer .subs-form .btn {
+  background-color: var(--green);
+  color: var(--footer-grey);
+  border-top-right-radius: 0.2rem;
+  border-bottom-right-radius: 0.2rem;
+  cursor: pointer;
+}
+.footer .subs-form .btn:hover {
+  background-color: var(--green-light);
+}
+.footer .footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  gap: 10px;
+}
+.footer .footer-bottom .credit {
+  font-size: 15px;
+}
+.footer .footer-bottom .credit span {
+  font-size: 22px;
+}
+
+@media (max-width: 769px) {
+  .footer {
+    text-align: center;
+    padding: 2rem 2%;
+  }
+  .footer .footer-logo {
     margin: auto;
-}
-.subs-container .share a{
-    height: 40px;
-    width: 40px;
+    margin-bottom: 10px;
+  }
+  .footer .box-container .box h3 {
     font-size: 20px;
-    border: 1px solid var(--line);
-    text-align: center;
-    margin-left: 10px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-.subs-container .share a:hover{
-    background-color: var(--footer-grey);
-    color: var(--footer-blue);
-}
-.subs-container{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
-}
-.subs-form input,button{
-    padding: 6px 16px;
-    font-size: 16px;
-}
-.subs-form input{
-    border-top-left-radius: .2rem;
-    border-bottom-left-radius: .2rem;
-}
-.subs-form .btn{
-    background-color: var(--green);
-    color: var(--footer-grey);
-    border-top-right-radius: .2rem;
-    border-bottom-right-radius: .2rem;
-    cursor: pointer;
-}
-.subs-form .btn:hover{
-    background-color: var(--green-light);
-}
-.credit{
-    margin-top: 40px;
-    text-align: center;
-}
+  }
 
-@media (max-width:769px){
-    .footer{
-        padding: 2rem 4%;
-    }
-    
-    .subs-container{
-        display: block;
-        text-align: center;
-    }
-    .subs-container .share{
-        margin-bottom: 25px;
-    }
+  .footer a {
+    line-height: 2rem;
+    font-size: 15px;
+  }
+  .footer .footer-items {
+    flex-direction: column;
+  }
+  .footer .footer-items .box {
+    margin-top: 15px;
+  }
+
+  .footer .subs-container {
+    display: block;
+  }
+  .footer .subs-container .social-media-icons {
+    margin-bottom: 25px;
+  }
+  .footer .line {
+    padding: 10px 0;
+  }
+  .footer .subs-container .subs-form input {
+    font-size: 15px;
+    width: 15rem;
+  }
+  .footer .subs-container .subs-form .btn {
+    font-size: 15px;
+  }
+
+  .footer .footer-bottom {
+    flex-direction: column;
+  }
 }
