--- a/frontend/src/component/layout/Header/Header.css
+++ b/frontend/src/component/layout/Header/Header.css
@@ -10,22 +10,27 @@
   align-items: center;
   background: #fff;
   height: 90px;
-  padding: 0 1% 0 5%;
+  padding: 0 1% 0 4%;
   box-shadow: var(--box-shadow);
 }
 .header .logo {
-  font-size: 24px;
-  font-weight: bolder;
-  color: var(--green);
+  height: 26px;
   margin-right: 5px;
 }
-.header .navbar a {
+.navbar .navbar-items {
+  display: flex;
+  align-items: center;
+}
+.navbar ul {
+  list-style: none;
+}
+.navbar .navbar-items .nav-item {
   font-size: 15px;
   font-weight: 600;
   margin: 0 1rem;
   color: black;
 }
-.header .navbar a:hover {
+.navbar .navbar-items .nav-item:hover {
   color: var(--green);
   cursor: pointer;
 }
@@ -57,7 +62,7 @@
   color: black;
 
   display: flex;
-  
+
   align-items: center;
   margin-right: 5px;
 }
@@ -69,10 +74,6 @@
   cursor: pointer;
   color: #666666;
 }
-.header-icons .UserIcon {
-  height: 36px;
-  width: 36px;
-}
 
 .header-icons i {
   margin-left: 2px;
@@ -82,15 +83,49 @@
   cursor: pointer;
 }
 #menu-btn {
+  display: none;
   color: rgb(80, 80, 80);
   cursor: pointer;
-  margin-right: 5px;
-  margin-top: 5px;
+}
+
+/* Product Dropdown */
+
+.nav-dropdown #products-dropdown {
+  display: flex;
+  align-items: center;
+}
+
+.nav-dropdown {
+  position: relative;
+}
+.products-dropdown {
+  position: absolute;
+  display: none;
+  padding-top: 20px;
+  top: 20px;
+  right: -50px;
+  background-color: #fff;
+  box-shadow: var(--box-shadow);
+
+}
+.nav-dropdown:hover .products-dropdown {
+  display: block;
+}
+
+.products-dropdown li {
+  font-size: 12px;
+  font-weight: 600;
+  padding: 8px;
+  cursor: pointer;
+}
+
+.products-dropdown li:hover {
+  background-color: #ddd;
+}
+#products-direct{
   display: none;
 }
-#menu-btn:hover {
-  color: var(--green);
-}
+/* Search Form */
 
 .search-form {
   position: fixed;
@@ -143,11 +178,12 @@
 .navbar .login-navbar {
   display: none;
 }
-.select-menu {
+/* LoggedIn dropdown */
+.loggedIn-select-menu {
   width: 110px;
   margin-left: 12px;
 }
-.select-menu .select-btn {
+.loggedIn-select-menu .loggedIn-select-btn {
   display: flex;
   height: 30px;
   background: rgb(233, 233, 233);
@@ -162,10 +198,10 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
-.select-menu.active .select-btn i {
+.loggedIn-select-menu.active .loggedIn-select-btn i {
   transform: rotate(-180deg);
 }
-.select-menu .options {
+.loggedIn-select-menu .loggedIn-options {
   position: absolute;
   padding: 5px;
   margin-top: 5px;
@@ -176,11 +212,11 @@
   display: none;
 }
 
-.select-menu.active .options {
+.loggedIn-select-menu.active .loggedIn-options {
   display: block;
 }
 
-.options .option {
+.loggedIn-options .loggedIn-option {
   display: flex;
   height: 30px;
   cursor: pointer;
@@ -192,27 +228,30 @@
   background: #fff;
 }
 
-.options .option:hover {
+.loggedIn-options .loggedIn-option:hover {
   background: #f2f2f2;
 }
-.options .option i {
+.loggedIn-options .loggedIn-option i {
   margin-right: 12px;
 }
-.options .option .option-text {
+.loggedIn-options .loggedIn-option .loggedIn-option-text {
   font-size: 12px;
+  font-weight: 600;
   color: #333;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 890px) {
   .header {
     padding: 0 5px 0 5px;
     
   }
-  .header .logo{
-    position: absolute;
-    top:28px;
-    left: 50px;
-  }
+ .header .logo{
+   position: absolute;
+   left: 50px;
+   transform: translateY(-50%);
+    height: 21px;
+ }
+
   .header-icons .login-reg-link {
     display: none;
   }
@@ -230,7 +269,7 @@
   }
 
   .search-form {
-    width: 100%;
+    width: 90%;
   }
 
   .header .navbar {
@@ -243,20 +282,32 @@
     box-shadow: var(--box-shadow);
     z-index: 150;
   }
+
   .header .navbar.active {
     left: 0;
   }
-  .header .navbar a {
-    color: var(--green);
+  .navbar .navbar-items {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    margin-top: 20px;
+  }
+  .navbar .navbar-items .nav-item {
+    color: var(--green);
     font-size: 20px;
     font-weight: 500;
-    margin: 2rem 0;
-    padding-bottom: 3px;
+    margin: 0.8rem 0;
   }
 
-  .select-btn {
+  .category-options {
+    display: none;
+  }
+  #products-direct{
+    display: block;
+  }
+  .nav-dropdown #products-dropdown{
+    display: none;
+  }
+  .loggedIn-select-btn {
     width: 100px;
   }
 }
