--- a/frontend/src/component/Home/Home.css
+++ b/frontend/src/component/Home/Home.css
@@ -4,8 +4,12 @@
   margin-top: 88px;
 }
 
+
 .banner-image img {
   width: 100%;
+  height: 475px;
+  object-fit: cover;
+  
 }
 .title-content {
   position: absolute;
@@ -16,9 +20,11 @@
 .title-content :nth-child(1) {
   font-size: 16px;
   color: #fff;
+  margin-bottom: 10px;
 }
 .title-content :nth-child(2) {
   font-size: 50px;
+  text-transform: uppercase;
 }
 .title-content :nth-child(2) span {
   font-size: 40px;
@@ -27,12 +33,12 @@
   font-size: 14px;
 }
 .title-content button {
-  padding: 6px 15px;
+  padding: 8px 20px;
   background-color: #000;
   color: #fff;
   cursor: pointer;
   border-radius: 2px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .title-content button:hover {
   background-color: rgb(49, 49, 49);
@@ -143,7 +149,7 @@
 }
 
 .category-banner {
-  width: 250px;
+  width: 300px;
 }
 
 .category-banner img {
@@ -251,68 +257,36 @@
 }
 
 @media screen and (max-width: 871px) {
-  .home-product-section {
-    grid-template-columns: repeat(2, 1fr);
+  .title-content button{
+    padding: 6px 15px;
   }
-  .product-card-details h4 a {
-    font-size: 13px;
-  }
-  .banner-image img {
-    width: 140%;
-  }
-
-  .title-content {
-    left: 3rem;
-    top: 20%;
-  }
-  .title-content :nth-child(1) {
-    font-size: 14px;
-  }
-  .title-content :nth-child(2) {
-    font-size: 35px;
-  }
-  .title-content :nth-child(2) span {
-    font-size: 28px;
-  }
-  .title-content button {
-    padding: 8px 14px;
-    font-size: 12px;
-  }
-
   .btn-slide {
     height: 40px;
     width: 25px;
   }
+  .home-product-section {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  
   .service-list {
     gap: 20px;
   }
+  .product-card-details h4 a {
+    font-size: 13px;
+  }
 }
 @media screen and (max-width: 500px) {
-  .banner-image img {
-    width: 170%;
+  .home-product-section{
+    padding: 0 10px;
+    gap: 10px;
   }
-
-  .title-content :nth-child(2) {
-    font-size: 27px;
-  }
-  .title-content :nth-child(2) span {
-    font-size: 20px;
-  }
-  .title-content p {
-    font-size: 12px;
-    width: 80%;
-  }
-
   .title-content {
+    position: absolute;
+    top: 25%;
     left: 2rem;
   }
-  .title-content button {
-    padding: 6px 12px;
-    font-size: 12px;
-  }
-  .banner-image img {
-    min-height: 150px;
-  }
+  
+  
   .product-card-top div.undefined.react-stars {
     transform: scale(0.6);
   }
