--- a/frontend/src/component/Product/Products.css
+++ b/frontend/src/component/Product/Products.css
@@ -1,9 +1,10 @@
 .products-heading {
-  margin-top: 115px;
-  margin-bottom: 25px;
+  margin-top: 110px;
+  margin-bottom: 35px;
   display: flex;
   justify-content: center;
   font-size: 30px;
+  text-transform: uppercase;
 }
 .products-section {
   display: flex;
@@ -16,7 +17,6 @@
   flex: 1;
   background-color: #fff;
   padding: 30px;
-  height: 150vh;
   max-width: 250px;
   box-shadow: var(--box-shadow);
 }
