--- a/frontend/src/component/Home/Home.css
+++ b/frontend/src/component/Home/Home.css
@@ -167,6 +167,7 @@
   filter: grayscale(0%);
 }
 
+
 .category-item-btn {
   position: absolute;
   top: 200px;
@@ -180,7 +181,7 @@
   width: max-content;
   border-radius: 5px;
 }
-.category-item-btn:hover {
+.category-item:hover .category-item-btn {
   color: var(--green-light);
 }
 /* Product Card */
