--- a/frontend/src/component/layout/Header/Header.css
+++ b/frontend/src/component/layout/Header/Header.css
@@ -101,9 +101,9 @@
 .products-dropdown {
   position: absolute;
   display: none;
-  padding-top: 20px;
-  top: 20px;
-  right: -50px;
+  padding-top: 15px;
+  top: 25px;
+  right: 0px;
   background-color: #fff;
   box-shadow: var(--box-shadow);
 
@@ -240,6 +240,24 @@
   font-weight: 600;
   color: #333;
 }
+
+.about{
+  margin-top: 8rem;
+  padding: 0 50px;
+  text-align: center;
+}
+.about ul{
+  list-style: none;
+  margin: 20px 0;
+}
+.about h1{
+  margin-bottom: 20px;
+}
+.about h2{
+  margin-top: 20px;
+}
+
+/**************************************** @media (max-width: 890px) ****************************************************************/
 
 @media (max-width: 890px) {
   .header {
