--- a/frontend/src/component/Home/Home.css
+++ b/frontend/src/component/Home/Home.css
@@ -1,48 +1,49 @@
 /* Banner */
+
 .swiper-container {
   position: relative;
-  margin-top: 88px;
+  margin-top: 90px;
+}
+.banner-image {
+  background-position: 40%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 88vh;
 }
 
-
-.banner-image img {
-  width: 100%;
-  height: 475px;
-  object-fit: cover;
-  
-}
-.title-content {
-  position: absolute;
-  top: 25%;
-  left: 5rem;
+.swiper-container .title-content {
+  padding: 120px 0 0 80px;
 }
 
-.title-content :nth-child(1) {
-  font-size: 16px;
-  color: #fff;
-  margin-bottom: 10px;
+.swiper-container .title-content h1 {
+  font-size: 3.2rem;
+  line-height: 1.2;
 }
-.title-content :nth-child(2) {
-  font-size: 50px;
-  text-transform: uppercase;
+.swiper-container .title-content .hero-text {
+  font-size: 1.1rem;
+  font-weight: 400;
+  color: #333;
+  margin-block: 16px 30px;
 }
-.title-content :nth-child(2) span {
-  font-size: 40px;
+.swiper-container .title-content .price {
+  color: #000;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-block-end: 30px;
 }
-.title-content p {
-  font-size: 14px;
-}
-.title-content button {
-  padding: 8px 20px;
+.btn-hero {
   background-color: #000;
   color: #fff;
-  cursor: pointer;
-  border-radius: 2px;
-  margin-top: 20px;
+  font-weight: 600;
+  max-width: max-content;
+  padding: 10px 30px;
+  border-radius: 3px;
+  transition: 0.25s ease;
 }
-.title-content button:hover {
-  background-color: rgb(49, 49, 49);
+.btn-hero:is(:hover, :focus) {
+  background-color: var(--green-light);
 }
+
 .btn-slide {
   position: absolute;
   top: 50%;
@@ -52,12 +53,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.667);
   color: #fff;
+  border-radius: 10px;
   cursor: pointer;
   z-index: 200;
 }
-
+.btn-slide:hover {
+  background-color: #000;
+}
 .btn-next-slide {
   right: 0;
 }
@@ -131,59 +135,71 @@
 }
 
 /* Category Cards */
-.category {
-  padding: 0 0px;
-  cursor: pointer;
-}
-
-
 .category-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min(25rem, 100%), 1fr));
+  place-items: center;
+  gap: 10px;
+}
+.category-item {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
-}
-
-.category .category-item {
+  flex-direction: column;
+  padding: 40px;
+  padding-block-end: 30px;
   position: relative;
-  list-style-type: none;
+  z-index: 1;
+  height: 400px;
+  width: 400px;
 }
 
-.category-banner {
-  width: 300px;
-}
-
-.category-banner img {
-  width: 100%;
-  object-fit: cover;
-  filter: grayscale(50%);
-  transition: 0.75s ease;
-
-}
-
-.category-item:hover .category-banner img {
-  transform: scale(1.05);
-  filter: grayscale(0%);
-}
-
-
-.category-item-btn {
+.category-bg-image {
   position: absolute;
-  top: 200px;
-  left: 50%;
-  background-color: rgba(0, 0, 0, 0.576);
-  color: #fff;
-  font-size: 22px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.category .category-item h2 {
+  margin-block-end: 12px;
+  font-size: 2.2rem;
+  line-height: 1.3;
+}
+.category .category-item p {
+  font-size: 1.1rem;
   font-weight: 600;
-  padding: 8px 15px;
-  transform: translateX(-50%);
-  width: max-content;
-  border-radius: 5px;
+  margin-block-end: auto;
 }
-.category-item:hover .category-item-btn {
-  color: var(--green-light);
+.btn-link {
+  color: #000;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  transition: transform 0.3s;
 }
+@keyframes moveRight {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.btn-link svg {
+  margin-left: 5px;
+}
+.category-item:hover svg {
+  animation: moveRight 0.6s forwards;
+}
+
 /* Product Card */
 
 .product-card {
@@ -258,10 +274,77 @@
   transition: 0.3s;
   font-size: 17px;
 }
+/* Banner bottom */
+.banner-bottom {
+  display: grid;
+  grid-template-columns: 1fr 0.6fr;
+  gap: 20px;
+  margin: 20px;
+}
+.banner-1 {
+  position: relative;
+  background-image: url(../../images/banner-2.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 400px;
+}
+.banner-2 {
+  background-image: url(../../images/banner-1.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 400px;
+}
+
+.banner-info {
+  padding: 50px 30px;
+  filter: brightness(80%);
+}
+.banner-info .btn-hero {
+  background-color: #fff;
+  color: #000;
+}
+.banner-info .btn-hero:hover {
+  background-color: var(--green-light);
+}
+.banner-bottom h2 {
+  font-size: 2rem;
+  font-weight: 500;
+}
+.banner-1 h2 {
+  margin-bottom: 60px;
+}
+.banner-1 p {
+  font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.banner-2 p {
+  font-size: 1rem;
+  margin-bottom: 60px;
+}
 
 @media screen and (max-width: 871px) {
-  .title-content button{
-    padding: 6px 15px;
+  .banner-bottom {
+    grid-template-columns: 1fr;
+    place-items: center;
+  }
+  .banner-1,
+  .banner-2 {
+    width: 80%;
+  }
+
+  .banner-image {
+    background-position: 50%;
+  }
+  .swiper-container .title-content h1 {
+    font-size: 3rem;
+    line-height: 1.1;
+  }
+  .swiper-container .title-content .btn-hero {
+    padding: 8px 22px;
   }
   .btn-slide {
     height: 40px;
@@ -270,26 +353,49 @@
   .home-product-section {
     grid-template-columns: repeat(2, 1fr);
   }
-  
+
   .service-list {
     gap: 20px;
+  }
+  .category .category-item {
+    width: 350px;
+    height: 350px;
+    padding: 30px;
+  }
+  .category .category-item h2 {
+    font-size: 1.7rem;
+  }
+  .category-list {
+    grid-template-columns: repeat(auto-fit, minmax(min(22rem, 100%), 1fr));
   }
   .product-card-details h4 a {
     font-size: 13px;
   }
 }
 @media screen and (max-width: 500px) {
-  .home-product-section{
+  .banner-1,
+  .banner-2 {
+    width: 100%;
+  }
+  .banner-image {
+    background-position: 55%;
+  }
+
+  .swiper-container .title-content {
+    padding: 80px 30px;
+  }
+  .swiper-container .title-content h1 {
+    font-size: 2.8rem;
+  }
+  .hero-text {
+    font-size: 1rem;
+  }
+
+  .home-product-section {
     padding: 0 10px;
     gap: 10px;
   }
-  .title-content {
-    position: absolute;
-    top: 25%;
-    left: 2rem;
-  }
-  
-  
+
   .product-card-top div.undefined.react-stars {
     transform: scale(0.6);
   }
