--- a/frontend/src/component/Product/Products.css
+++ b/frontend/src/component/Product/Products.css
@@ -38,12 +38,13 @@ span.MuiSlider-root {
 }
 .category-link {
   list-style: none;
-  margin-top: 10px;
+  padding: 10px;
 }
 .rating-above {
   margin-top: 15px;
 }
 .go-button {
+  padding: 7px 20px;
   background-color: #ddd;
   font-weight: 500;
   cursor: pointer;
@@ -162,7 +163,6 @@ span.MuiSlider-root {
   }
   .filter-icon {
     font-size: 15px;
-    top: 150px;
-    padding: 0px 5px;
+    top: 160px;
   }
 }
