--- a/frontend/src/component/layout/Header/Header.css
+++ b/frontend/src/component/layout/Header/Header.css
@@ -106,7 +106,6 @@
   right: 0px;
   background-color: #fff;
   box-shadow: var(--box-shadow);
-
 }
 
 .nav-dropdown:hover .products-dropdown {
@@ -123,7 +122,7 @@
 .products-dropdown li:hover {
   background-color: #ddd;
 }
-#products-direct{
+#products-direct {
   display: none;
 }
 /* Search Form */
@@ -155,7 +154,6 @@
   border: 1px solid #ddd;
 
   border-radius: 0.2rem;
- 
 }
 .search-form button {
   position: absolute;
@@ -181,7 +179,6 @@
 /* LoggedIn dropdown */
 .loggedIn-select-menu {
   width: 110px;
-  margin-left: 12px;
 }
 .loggedIn-select-menu .loggedIn-select-btn {
   display: flex;
@@ -240,19 +237,19 @@
   color: #333;
 }
 
-.about{
+.about {
   margin-top: 8rem;
   padding: 0 50px;
   text-align: center;
 }
-.about ul{
+.about ul {
   list-style: none;
   margin: 20px 0;
 }
-.about h1{
+.about h1 {
   margin-bottom: 20px;
 }
-.about h2{
+.about h2 {
   margin-top: 20px;
 }
 
@@ -261,14 +258,13 @@
 @media (max-width: 890px) {
   .header {
     padding: 0 10px 0 5px;
-    
   }
- .header .logo{
-   position: absolute;
-   left: 50px;
-   transform: translateY(-50%);
+  .header .logo {
+    position: absolute;
+    left: 50px;
+    transform: translateY(-50%);
     height: 21px;
- }
+  }
 
   .header-icons .login-reg-link {
     display: none;
@@ -315,7 +311,7 @@
     font-weight: 500;
     margin: 0.8rem 0;
   }
-  .navbar .navbar-items  .login-navbar .nav-item {
+  .navbar .navbar-items .login-navbar .nav-item {
     font-size: 12px;
     margin-left: -150px;
     margin-top: -20px;
@@ -324,20 +320,26 @@
     padding: 8px 10px;
     width: fit-content;
   }
-  .navbar .login-navbar{
+  .navbar .login-navbar {
     display: block;
   }
 
   .category-options {
     display: none;
   }
-  #products-direct{
+  #products-direct {
     display: block;
   }
-  .nav-dropdown #products-dropdown{
+  .nav-dropdown #products-dropdown {
     display: none;
   }
   .loggedIn-select-btn {
     width: 100px;
+  }
+}
+@media screen and (max-width: 420px) {
+  .loggedIn-select-menu {
+    margin-left: 5px;
+    width: 95px;
   }
 }
