--- a/frontend/src/component/layout/Header/Header.css
+++ b/frontend/src/component/layout/Header/Header.css
@@ -177,9 +177,7 @@
 }
 
 /* LoggedIn dropdown */
-.loggedIn-select-menu {
-  width: 110px;
-}
+
 .loggedIn-select-menu .loggedIn-select-btn {
   display: flex;
   height: 30px;
@@ -189,10 +187,11 @@
   font-weight: 400;
   border-radius: 8px;
   align-items: center;
-
   cursor: pointer;
   justify-content: space-between;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  margin-left: 10px;
+  width: 50px;
 }
 
 .loggedIn-select-menu.active .loggedIn-select-btn i {
@@ -201,8 +200,8 @@
 .loggedIn-select-menu .loggedIn-options {
   position: absolute;
   padding: 5px;
-  margin-top: 5px;
-  margin-left: -25px;
+  top: 65px;
+  right: 0;
   border-radius: 8px;
   background: #fff;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
