--- a/frontend/src/component/Product/Products.css
+++ b/frontend/src/component/Product/Products.css
@@ -142,8 +142,8 @@ span.MuiSlider-root {
     display: flex;
     align-items: center;
     position: absolute;
-    top: 130px;
-    margin-left: 5px;
+    top: 150px;
+    left: 5px;
     font-weight: 500;
     padding: 2px 8px;
     cursor: pointer;
@@ -152,6 +152,7 @@ span.MuiSlider-root {
 @media screen and (max-width: 768px) {
   .products-container {
     padding: 0 10px;
+    margin-top: 20px;
   }
 }
 @media screen and (max-width: 510px) {
